--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/themes": "^3.2.1",
     "next": "15.3.0",
     "next-pwa": "^5.6.0",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "screenfull": "^6.0.2"
