--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build && tsx scripts/pwa.ts",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/themes": "^3.2.1",
+    "@serwist/next": "^9.0.13",
     "next": "15.3.0",
     "next-pwa": "^5.6.0",
     "papaparse": "^5.5.2",
@@ -19,11 +20,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@serwist/build": "^9.0.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-loader": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "serwist": "^9.0.13",
     "typescript": "^5"
   }
 }
